# Devkit_VPlus

./: .gitlab-ci.yml  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/DevKit_DLL/: CMakeLists.txt
source/DevKit_DLL/src/: DllMain.cpp  IFMessageBox.cpp  IFMessageBox.h  IFMessageYesNo.cpp  IFMessageYesNo.h  IFPML.cpp  IFPML.h  Util.cpp  Util.h
source/DevKit_DLL/src/ClientSettings/: ClientCommonSettings.cpp  ClientCommonSettings.h
source/DevKit_DLL/src/GameHelpers/: CStringHelper.cpp  CStringHelper.h  GameMain.cpp  GameMain.h  MemoryHelper.cpp  MemoryHelper.h
source/DevKit_DLL/src/ImGui_Windows/: CharacterData.cpp
source/DevKit_DLL/src/ItemLinking/: GetItemName.cpp  GetItemName.h  GlobalItemLinking.cpp  GlobalItemLinking.h  ObjectData.h
source/DevKit_DLL/src/LicenseManager/: LicenseManager.cpp  LicenseManager.h
source/DevKit_DLL/src/Network/: CPSMission.cpp  CPSMission.h
source/DevKit_DLL/src/NewReverse/: IFMovePartyMember.cpp  IFMovePartyMember.h  IFMovePartyMemberSlot.cpp  IFMovePartyMemberSlot.h  IFMovePartyMemberSlotList.cpp  IFMovePartyMemberSlotList.h  IFSavedLocation.cpp  IFSavedLocation.h
source/DevKit_DLL/src/OldItemMall/: OldItemMall.cpp  OldItemMall.h
source/libs/BSLib/: CMakeLists.txt
source/libs/ClientLib/: CMakeLists.txt
source/libs/DiscordRichPresence/: CMakeLists.txt  README.md
source/libs/DiscordRichPresence/src/DiscordRichPresence/: DiscordManager.cpp  DiscordManager.h
source/libs/DiscordRichPresence/src/DiscordRichPresence/discord_game_sdk/: discord.h
source/libs/SimpleViewer/: CMakeLists.txt
(+202 files in other folders)
